--- a/aces/dashboard/ACES/appsettings.json
+++ b/aces/dashboard/ACES/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ACESContext": "Server=localhost,1433; Database=ACES_DB; User Id=SA; Password=mySecurepass1979**"
+    "ACESContext": "Server=DESKTOP-T6MA1RC; Database=ACES_DB; Trusted_Connection=True;"
   }
 }
