student interface now filters based on active enrollment courses only.

--- a/aces/dashboard/ACES/appsettings.json
+++ b/aces/dashboard/ACES/appsettings.json
@@ -11,3 +11,7 @@
     "ACESContext": "Server=DESKTOP-6DLIGKM\\SQLEXPRESS; Database=ACES_DB; Trusted_Connection=True;"
   }
 }
+
+//Server=ERICPC\\SQLEXPRESS2; Database=ACES_DB; Trusted_Connection=True;
+
+//Server=DESKTOP-6DLIGKM\\SQLEXPRESS; Database=ACES_DB; Trusted_Connection=True;
