--- a/aces/dashboard/ACES/appsettings.json
+++ b/aces/dashboard/ACES/appsettings.json
@@ -8,10 +8,14 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ACESContext": "Server=DESKTOP-6DLIGKM\\SQLEXPRESS; Database=ACES_DB; Trusted_Connection=True;"
+    "ACESContext": "Server=DESKTOP-T6MA1RC; Database=ACES_DB; Trusted_Connection=True;MultipleActiveResultSets=True;"
   }
 }
 
 //Server=ERICPC\\SQLEXPRESS2; Database=ACES_DB; Trusted_Connection=True;
 
 //Server=DESKTOP-6DLIGKM\\SQLEXPRESS; Database=ACES_DB; Trusted_Connection=True;
+
+//Server=DESKTOP-T6MA1RC; Database=ACES_DB; Trusted_Connection=True;MultipleActiveResultSets=True;
+
+//Data Source=titan.cs.weber.edu,10433;Initial Catalog=AntiCheat;Password=w@keyW@keyit$Timef0rSchool"
