Changed values of IsLoggedIn field to match database datatype.

--- a/aces/dashboard/ACES/appsettings.json
+++ b/aces/dashboard/ACES/appsettings.json
@@ -8,10 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ACESContext": "Server=DESKTOP-6DLIGKM\\SQLEXPRESS; Database=ACES_DB; Trusted_Connection=True;"
+    "ACESContext": "Data Source=titan.cs.weber.edu,10433;Initial Catalog=AntiCheat;User ID=AntiCheat;Password=w@keyW@keyit$Timef0rSchool"
   }
 }
-
-//Server=ERICPC\\SQLEXPRESS2; Database=ACES_DB; Trusted_Connection=True;
-
-//Server=DESKTOP-6DLIGKM\\SQLEXPRESS; Database=ACES_DB; Trusted_Connection=True;
