Github and factory code are roughly working together now. Still need to clean up and refine before merging with master.

--- a/aces/assignments/samples/c_asn/.acesconfig.json
+++ b/aces/assignments/samples/c_asn/.acesconfig.json
@@ -1,15 +1,14 @@
 {
   "files": [
-    "add.c",
-    "main.c"
+    "add.c"
   ],
   "whitespaces": [
-    "2",
-    "11",
-    "17"
+    "6",
+    "12",
+    "16"
   ],
   "randomstring": [
-    "3",
+    "2",
     "19"
   ]
 }
