Pretty much condensed everything into one loop where the put request is made to github. Still kind of hangs up. May need to do multithreading to help with performance. We can check with Brad and see what he thinks.

--- a/aces/assignments/samples/c_asn/.acesconfig.json
+++ b/aces/assignments/samples/c_asn/.acesconfig.json
@@ -1,16 +1,11 @@
 {
   "files": [
-    "add.c",
-    "b.c",
-    "e.c"
+    "add.c"
   ],
   "whitespaces": [
-    "6",
-    "12",
-    "16"
+    "6"
   ],
   "randomstring": [
-    "2",
-    "19"
+    "2"
   ]
 }
