--- a/aces/dashboard/ACES/appsettings.json
+++ b/aces/dashboard/ACES/appsettings.json
@@ -9,6 +9,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "ACESContext": "Data Source=titan.cs.weber.edu,10433;Initial Catalog=AntiCheat;User ID=AntiCheat;Password=w@keyW@keyit$Timef0rSchool"
-  }
+  },
+  "GithubToken": "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"
 }
 
