--- a/aces/dashboard/ACES/appsettings.Development.json
+++ b/aces/dashboard/ACES/appsettings.Development.json
@@ -5,5 +5,10 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ACESContext": "Data Source=titan.cs.weber.edu,10433;Initial Catalog=AntiCheat;User ID=AntiCheat;Password=w@keyW@keyit$Timef0rSchool"
+  },
+  "GithubToken": "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"
 }
