--- a/aces/dashboard/ACES/appsettings.Development.json
+++ b/aces/dashboard/ACES/appsettings.Development.json
@@ -10,5 +10,12 @@
   "ConnectionStrings": {
     "ACESContext": "Data Source=titan.cs.weber.edu,10433;Initial Catalog=AntiCheat;User ID=AntiCheat;Password=w@keyW@keyit$Timef0rSchool"
   },
-  "GithubToken": "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"
+  "GithubToken": "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",
+  "MailSettings": {
+    "Mail": "anticheatem623@gmail.com",
+    "DisplayName": "Anti-Cheat Email Service",
+    "Password": "apkmpjendixrsbab", // g33kSquAd&& is the gmail password, but apkmpjendixrsbab is the generated 16 digit code for secure authentication
+    "Host": "smtp.gmail.com",
+    "Port": 587
+  }
 }
