--- a/aces/dashboard/ACES/ACES.csproj
+++ b/aces/dashboard/ACES/ACES.csproj
@@ -6,7 +6,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-<<<<<<< HEAD
     <Compile Remove="Views\NewFolder1\**" />
     <Compile Remove="Views\NewFolder2\**" />
     <Compile Remove="Views\NewFolder3\**" />
@@ -28,6 +27,18 @@
   <ItemGroup>
     <Compile Remove="Migrations\20221115025737_addJSONFiles.cs" />
     <Compile Remove="Migrations\20221115025737_addJSONFiles.Designer.cs" />
+    <Compile Remove="Migrations\20221116021124_JSONFileAdd.cs" />
+    <Compile Remove="Migrations\20221116021124_JSONFileAdd.Designer.cs" />
+    <Compile Remove="Migrations\20221121195758_MyName.cs" />
+    <Compile Remove="Migrations\20221121195758_MyName.Designer.cs" />
+    <Compile Remove="Migrations\20221121200804_temporary.cs" />
+    <Compile Remove="Migrations\20221121200804_temporary.Designer.cs" />
+    <Compile Remove="Migrations\20221121201109_temporary.cs" />
+    <Compile Remove="Migrations\20221121201109_temporary.Designer.cs" />
+    <Compile Remove="Migrations\20221121201516_temporary.cs" />
+    <Compile Remove="Migrations\20221121201516_temporary.Designer.cs" />
+    <Compile Remove="Migrations\20221121203417_temporary.cs" />
+    <Compile Remove="Migrations\20221121203417_temporary.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
@@ -35,10 +46,8 @@
   </ItemGroup>
 
   <ItemGroup>
-=======
     <PackageReference Include="GoogleAuthenticator" Version="3.0.0" />
     <PackageReference Include="MailKit" Version="3.4.2" />
->>>>>>> master
     <PackageReference Include="Microsoft.AspNet.WebApi.Core" Version="5.2.7" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="3.6.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.6" />
