--- a/aces/dashboard/ACES/appsettings.Development.json
+++ b/aces/dashboard/ACES/appsettings.Development.json
@@ -8,8 +8,10 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ACESContext": "Data Source=titan.cs.weber.edu,10433;Initial Catalog=AntiCheat;User ID=AntiCheat;Password=w@keyW@keyit$Timef0rSchool"
-  },
+    //"ACESContext": "Data Source=titan.cs.weber.edu,10433;Initial Catalog=AntiCheat;User ID=AntiCheat;Password=w@keyW@keyit$Timef0rSchool"
+    "ACESContext": "Data Source=DESKTOP-C9KE5I2;Initial Catalog=AntiCheat;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+  
+},
   "GithubToken": "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",
   "MailSettings": {
     "Mail": "anticheatem623@gmail.com",
